CSS fix
Extended stats-list class to avoid scrollbar

--- a/assets/css/wrapped.css
+++ b/assets/css/wrapped.css
@@ -182,7 +182,7 @@ img {
 }
 
 .stats-list {
-    max-height: 55em;
+    max-height: 60em;
     overflow-x: hidden;
     overflow-y: auto;
     scrollbar-width: thin;
